ADD: 参加コードを入力したらコミュニティを戻すAPIの追加
