# backend/src/main/java/com/mokimaki/arput/controller/CommunityController.java
@@ -8,6 +8,8 @@ import com.mokimaki.arput.presentation.dto.community.dashboard.CommunityDashboar
 import com.mokimaki.arput.presentation.dto.community.dashboard.CommunityDashboardOutputData;
 import com.mokimaki.arput.presentation.dto.community.delete.CommunityDeleteInputData;
 import com.mokimaki.arput.presentation.dto.community.delete.CommunityDeleteOutputData;
+import com.mokimaki.arput.presentation.dto.community.entry.CommunityEntryInputData;
+import com.mokimaki.arput.presentation.dto.community.entry.CommunityEntryOutputData;
 import com.mokimaki.arput.presentation.dto.community.index.CommunityIndexInputData;
 import com.mokimaki.arput.presentation.dto.community.index.CommunityIndexOutputData;
 import com.mokimaki.arput.presentation.dto.community.show.CommunityShowInputData;
@@ -15,6 +17,7 @@ import com.mokimaki.arput.presentation.dto.community.show.CommunityShowOutputDat
 import com.mokimaki.arput.presentation.dto.community.update.CommunityUpdateInputData;
 import com.mokimaki.arput.presentation.dto.community.update.CommunityUpdateOutputData;
 import com.mokimaki.arput.presentation.request.community.CommunityCreateRequest;
+import com.mokimaki.arput.presentation.request.community.CommunityEntryRequest;
 import com.mokimaki.arput.presentation.request.community.CommunityUpdateRequest;
 import com.mokimaki.arput.presentation.response.community.*;
 import com.mokimaki.arput.usecase.community.*;
@@ -33,6 +36,7 @@ public class CommunityController implements CommunityRouting {
     private final CommunityUpdateUseCase communityUpdateUseCase;
     private final DeleteCommunityUseCase communityDeleteUseCase;
     private final CommunityShowUseCase communityShowUseCase;
+    private final CommunityEntryUseCase communityEntryUseCase;
 
     public CommunityController(
             CreateCommunityUseCase createCommunityUseCase,
@@ -40,7 +44,8 @@ public class CommunityController implements CommunityRouting {
             CommunityIndexUseCase communityIndexUseCase,
             CommunityUpdateUseCase communityUpdateUseCase,
             DeleteCommunityUseCase communityDeleteUseCase,
-            CommunityShowUseCase communityShowUseCase
+            CommunityShowUseCase communityShowUseCase,
+            CommunityEntryUseCase communityEntryUseCase
     ) {
         this.createCommunityUseCase = createCommunityUseCase;
         this.communityDashboardUseCase = communityDashboardUseCase;
@@ -48,6 +53,7 @@ public class CommunityController implements CommunityRouting {
         this.communityUpdateUseCase = communityUpdateUseCase;
         this.communityDeleteUseCase = communityDeleteUseCase;
         this.communityShowUseCase = communityShowUseCase;
+        this.communityEntryUseCase = communityEntryUseCase;
     }
 
     @Override
@@ -124,6 +130,20 @@ public class CommunityController implements CommunityRouting {
 
         try {
             CommunityShowOutputData output = communityShowUseCase.execute(input);
+
+            return response.success(output);
+        } catch (UseCaseException e) {
+            return response.error(e);
+        }
+    }
+
+    @Override
+    public CommunityEntryResponse entryCommunity(String userId, @RequestBody CommunityEntryRequest entryRequest) {
+        var input = new CommunityEntryInputData(userId, entryRequest.entryCode());
+        var response = new CommunityEntryResponse();
+
+        try {
+            CommunityEntryOutputData output = communityEntryUseCase.execute(input);
 
             return response.success(output);
         } catch (UseCaseException e) {
